# poet_ml_framework_tests

./: .gitmodules  CMakeLists.txt  CMakeListsBACKUP.txt  README.txt  turing_compile_tips_tricks
.ipynb_checkpoints/: process_output_data-checkpoint.ipynb
CMake/Modules/: FindRRuntime.cmake
RData/: indices.rds  iter_003.rds  iter_005.rds  iter_007.rds  iter_008.rds  iter_009.rds  iter_012.rds  iter_017.rds  iter_018.rds  iter_021.rds  iter_027.rds  iter_030.rds  iter_032.rds  iter_033.rds  iter_037.rds  iter_040.rds  iter_041.rds  iter_042.rds  iter_044.rds  iter_048.rds  iter_050.rds  iter_051.rds  iter_056.rds  iter_057.rds  iter_066.rds  iter_067.rds  iter_070.rds  iter_071.rds  iter_073.rds  iter_075.rds  iter_076.rds  iter_078.rds  iter_079.rds  iter_081.rds  iter_082.rds  iter_085.rds  iter_089.rds  iter_093.rds  iter_094.rds  iter_096.rds  (+199 more)
RData/full/: iter_001.rds  iter_002.rds  iter_004.rds  iter_006.rds  iter_010.rds  iter_011.rds  iter_013.rds  iter_014.rds  iter_015.rds  iter_016.rds  iter_019.rds  iter_020.rds  iter_022.rds  iter_023.rds  iter_024.rds  iter_025.rds  iter_026.rds  iter_028.rds  iter_029.rds  iter_031.rds  iter_034.rds  iter_035.rds  iter_036.rds  iter_038.rds  iter_039.rds  iter_043.rds  iter_045.rds  iter_046.rds  iter_047.rds  iter_049.rds  iter_052.rds  iter_053.rds  iter_054.rds  iter_055.rds  iter_058.rds  iter_059.rds  iter_060.rds  iter_061.rds  iter_062.rds  iter_063.rds  (+225 more)
process_output/: experiments.csv  output.EMA.1222  output.EMA.12904  output.EMA.13881  output.EMA.20263  output.EMA.24899  output.EMA.28683  output.EMA.28888  output.EMA.28966  output.EMA.29411  output.EMA.30692  output.EMA.3841  output.EMA.6720  output.EMA.7793  output.EMA.7926  output.EMA.8236  output.EMA.8846  output.EMA.975  output.GPU_usage.1222  output.GPU_usage.12904  output.GPU_usage.20263  output.GPU_usage.24899  output.GPU_usage.28683  output.GPU_usage.28888  output.GPU_usage.8236  output.GPU_usage.975  output.job_info.12904  output.job_info.24899  output.job_info.28683  output.job_info.28888  output.job_info.28966  output.job_info.3841  output.job_info.4686  output.job_info.6720  output.job_info.975  output.model.13881.keras  output.model.20263.keras  output.model.24899.keras  output.model.8846.keras  output.training_history.12904.csv  (+10 more)
process_output/.ipynb_checkpoints/: process_output_data-checkpoint.ipynb
process_output/output.model.20263.tflite/: fingerprint.pb  saved_model.pb
process_output/output.model.20263.tflite/variables/: variables.data-00000-of-00001  variables.index
src/: barite_50ai_all.onnx  config.h.in  framework_test.cpp  framework_test.cpp.orig  framework_test_functions.h  global_vars.h  gpu_monitor.cpp  gpu_monitor.h  keras_model_2_tflite_converter.py  measure_gpu.h  onnxrt_test.h
src/Rfiles/: Rfunctions.R  Rfunctions_POET.R  Rkeras2.R  Rkeras3.R
src/framework_test_func/: keras_Rinside.cpp  tflite.cpp
src/test_model.tflite/: fingerprint.pb  saved_model.pb
src/test_model.tflite/variables/: variables.data-00000-of-00001  variables.index
